--- a/scheme.css
+++ b/scheme.css
@@ -1,8 +1,19 @@
-code[class*="language-"],
-pre[class*="language-"] {
-  color: #393a34;
+
+/**
+ * GHColors theme by Avi Aryan (http://aviaryan.in)
+ * Inspired by Github syntax coloring
+ */
+
+code[class*="language-"] {
   font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier,
     monospace;
+}
+
+pre[class*="language-"],
+code[class*="language-"] {
+  font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier,
+    monospace;
+  color: #393a34;
   direction: ltr;
   text-align: left;
   white-space: pre;
@@ -13,6 +24,14 @@ pre[class*="language-"] {
 
   tab-size: 4;
   hyphens: none;
+}
+
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+  background-color: rgba(27, 31, 35, 0.05);
+  padding: 0.2em 0.4em;
+  border-radius: 3px;
+  font-size: 85%;
 }
 
 .token.keyword,
@@ -50,16 +69,6 @@ pre[class*="language-"] {
 .token.script,
 .token.punctuation {
   color: #24292e;
-}
-
-/* Inline code */
-:not(pre) > code[class*="language-"] {
-  background-color: rgba(27, 31, 35, 0.05);
-  padding: 0.2em 0.4em;
-  border-radius: 3px;
-  font-size: 85%;
-  font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, Courier,
-    monospace;
 }
 
 .token.important,
